--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									<a href="#" class="image"><img src="images/Efe Passport.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Career Overview</h2>
-										<p>I am a results-oriented Data Analyst with eight years of experience using data to drive strategic decisiom-making in healt analytics. Skilled Power BI, Microsoft Excel, and SQL, I excel at covering actionable insights and implementing dara-driven solutions to enhance business performance. Additionally, I create educative and informative social media content, sharing valuable tips on data analytics, Power BI, and Excel.</p>
+										<p>I am a results-oriented Data Analyst with eight years of experience using data to drive strategic decisiom-making in healt analytics. Skilled Power BI, Microsoft Excel, and SQL, I excel at covering actionable insights and implementing data-driven solutions to enhance business performance. Additionally, I create educative and informative social media content, sharing valuable tips on data analytics, Power BI, and Excel.</p>
 										<a href="https://wa.me/2347081329855" class="special">Hire Me</a>
 									</div>
 								</div>
